--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>BootCamp 2020</title>
 </head>
 <body>
-	 <div>Hellow From Umer to the world. 
+	 <div>Hellow From Umer Hoor to the world. 
 	 	<b>Yesss...</b>
 	 </div>
 </body>
