--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>BootCamp 2020</title>
+    <title>BootCamp 2020</title>
 </head>
+
 <body>
-	 <div>Hellow From Umer Hoor to the world. 
-	 	<b>Yesss...</b>
-	 </div>
+    <div>Hellow From Umer to the world.
+        <b>Yesss...</b>
+    </div>
 </body>
+
 </html>
